--- a/src/megauni/Route/MUE/__nav_bar.sass
+++ b/src/megauni/Route/MUE/__nav_bar.sass
@@ -13,12 +13,16 @@ nav
   p
     font-size: 0.8rem
     line-height: 1rem
-  div.disclaimer
+  footer
     color: $greyish_dark
+    p.important
+      color: $black_light
 
   ul
     li
       display: block
       list-style: none
+      font-size: 0.8rem
+      padding-bottom: 0.9rem
 
 
